--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ MarkupSafe==0.18
 SQLAlchemy==0.8.4
 WTForms==1.0.5
 Werkzeug==0.9.4
+psycopg2==2.5.2
 itsdangerous==0.23
 python-dateutil==2.2
+pytz==2013.9
+six==1.5.2
 virtualenv==1.10.1
